<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="@drawable/gradient"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:text="@string/temp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/mm"
            />
        <TextView
            android:id="@+id/txt_chat3"
            app:drawableStartCompat="@drawable/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_gravity="left"
            android:layout_marginBottom="1dp"
            android:textStyle="bold"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/txt2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:hint="@string/fname"
            android:background="@color/white"
            android:textColor="@color/black"
            android:inputType="textPassword"

            />


        <Button
            android:id="@+id/bttn1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gg"
            android:layout_marginTop="250dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:clickable="true"
            android:onClick="btn1"
            android:focusable="true"
            android:textAllCaps="false"
            />

    </LinearLayout>
</ScrollView>