<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fillViewport="true">
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="@drawable/gradient"
        >


        <TextView
            android:id="@+id/txt_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="70dp"
            android:text="@string/temp"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txt_chat2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="70dp"
            android:textColor="@color/black"
            android:textSize="60dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/bttn1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gg"
            android:layout_marginTop="60dp"
            android:text="@string/convert"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:clickable="true"
            android:onClick="btn1"
            android:focusable="true"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/bttn2"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/gg"
            android:layout_marginTop="20dp"
            android:text="@string/convert2"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:clickable="true"
            android:onClick="btn1"
            android:focusable="true"
            android:textAllCaps="false"
            />


    </LinearLayout>
</ScrollView>
